@@ -1,0 +1,58 @@
+	.include 'dpf.inc'
+
+	.area LCDAUX (CODE)
+
+_lcd_custom_init::
+	mov	dptr,#_custom_initseq
+	lcall	_lcd_init_by_table
+;
+; initial contrast
+;
+	mov	a,#0x2a
+	clr	LCD_A0
+	lcall	otp_lcd_write
+	mov	a,#0x45
+	clr	LCD_A0
+	lcall	otp_lcd_write
+;
+	ret	
+
+
+	.area LCDAUX (CODE)
+
+_custom_lcdcontrasttbl::
+  .db  0x01, 0x07, 0x10, 0x10, 0x10, 0x10, 0x10, 0x10, 0x10
+_custom_lcdcontrasttbl_len::  .db  9
+
+_custom_contrasttbl2::
+  .db  0xdd, 0x14, 0x08, 0x71, 0x00, 0x71, 0x00, 0x91, 0x00, 0x91
+  .db  0x00
+_custom_contrasttbl2_len::  .db  11
+
+_custom_backlighttbl::
+  .db  0x00, 0x0c, 0x18, 0x24, 0x30, 0x3c, 0x48, 0x54, 0x60, 0x6c
+  .db  0x78, 0x84, 0x90, 0x9c, 0xa8, 0xb4, 0xc0, 0xcc, 0xd8, 0xe6
+  .db  0xfa, 0xfc
+_custom_backlighttbl_len::  .db  22
+
+_custom_backlighttbl2::
+_custom_backlighttbl2_len::  .db  0
+
+_custom_initseq::
+  .db  0x00, 0xb0, 0x64, 0x11, 0xb0, 0x0a, 0x10, 0xb0, 0x64, 0x11
+  .db  0xb0, 0xff, 0x71, 0x2c, 0xb0, 0x64, 0x71, 0xeb, 0xb0, 0xc8
+  .db  0x71, 0x02, 0x71, 0x01, 0x71, 0x26, 0x71, 0x01, 0x71, 0x26
+  .db  0x71, 0x09, 0x71, 0x26, 0x71, 0x0b, 0x71, 0x26, 0x71, 0x0f
+  .db  0x71, 0x28, 0x71, 0x03, 0x71, 0x45, 0x71, 0x00, 0x71, 0x53
+  .db  0x71, 0x00, 0x71, 0x10, 0x71, 0x03, 0x71, 0x24, 0x71, 0x0f
+  .db  0x71, 0x30, 0x71, 0x13, 0x71, 0x32, 0x71, 0x0e, 0x71, 0x40
+  .db  0x71, 0x80, 0x71, 0x42, 0x71, 0x04, 0x71, 0x83, 0x71, 0x43
+  .db  0x71, 0x04, 0x71, 0x7f, 0x71, 0x34, 0x71, 0x89, 0x71, 0x2a
+  .db  0x71, 0x4f, 0x71, 0x53, 0x71, 0x00, 0x71, 0x55, 0x71, 0x00
+  .db  0x71, 0x56, 0x71, 0x00, 0x71, 0x57, 0x71, 0x7f, 0x71, 0x36
+  .db  0x71, 0x00, 0x71, 0x51, 0xff
+_custom_initseq_len::  .db  115
+
+
+
+
